samples/_failures_safe/1761251825_2844b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0f4091e.c: In function ‘main’:
./samples/SAFE/__tmp_f0f4091e.c:157:5: error: expected identifier or ‘(’ at end of input
  157 |     int
      |     ^~~
./samples/SAFE/__tmp_f0f4091e.c:157:5: error: expected declaration or statement at end of input
